--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -263,7 +263,7 @@
                             /*Doctors*/
 
 .doc-sec{
-  width: 100%;
+  width: auto;
   height: 105vh;
   display: flex;
   flex-shrink: 0;
@@ -277,13 +277,36 @@
 
 .doc-sec .title{
   display: flex;
-  gap: 56rem;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 10rem;
+}
+
+.doc-sec .title .definition{
   font-family: 'Roboto',sans-serif;
   color: #1E1E1E;
   font-size: 2rem;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+}
+
+.doc-sec .title button {
+  border: none;
+  background:none;
+  cursor: pointer;
+  font-size: 1.5rem;
+  font-weight: 600;
+  align-self: center;
+}
+
+.doc-sec .title button:hover:not(.selected) {
+  color: var(--Red); /* لون النص عند التحويم إذا لم يكن محددًا */
+}
+
+.doc-sec .title button.selected {
+  color: var(--Red); /* لون النص عندما يكون محددًا */
 }
 
 .doc-sec .trans{
@@ -293,13 +316,14 @@
   align-items: center;
 }
 
-.doc-sec .title p{
+.doc-sec .title .see{
   color: #1E1E1E;
   font-family: Roboto;
   font-size: 1.25rem;
   font-style: normal;
   font-weight: 400;
-  line-height: normal;
+  align-items: center;
+  justify-content: center;
 }
 
 .doc-sec .doctors{
@@ -328,26 +352,22 @@
 
 .doc-sec .doctors .inner-carousel{
   display: flex;
-  width: 100.25rem;
-  height: 26.375rem;
-  gap: 1.5rem;
+  width: 100%;
+  height: 26vh;
+  gap: 1rem;
   flex-shrink: 0;
   margin-left: 0.1rem;
 }
+
+                              /* offline doctor*/
+
 .doc-sec .doctors .carousel .inner-carousel .item{
   display: flex;
   flex-direction: column;
   background-color: white;
-  width: 43vh;
-  height: 80vh;
+  width: 100%;
+  height: 70vh;
   padding-top: 2rem;
-}
-
-                          /* carousel-content*/
-
-.doc-sec .doctors .carousel .inner-carousel .item img{
-    width: 50%;
-    height: 50%;
 }
 
 .doc-sec .doctors .carousel .inner-carousel .item .doc-name h4{
@@ -392,13 +412,10 @@
   line-height: 110%; /* 0.9625rem */
 }
 
-.doc-sec .doctors .carousel .inner-carousel .item .stars{
-  padding: 0.2rem 0 0 1rem;
+.doc-sec .doctors .carousel .inner-carousel .item .stars {
+  margin: 10% 0 0 12% ;
 }
 
-.doc-sec .doctors .carousel .inner-carousel .item .stars span{
-  margin:2% 0 0 0 ;
-}
 .doc-sec .doctors .carousel .inner-carousel .item .doc-info{
   display: flex;
   align-items: flex-start;
@@ -426,6 +443,141 @@
 .doc-sec .doctors .carousel .inner-carousel .item:hover {
   transform: scale(1.1);
 }
+
+                              /* online doctor */
+
+.doc-sec .doctors .carousel .inner-carousel .itemon{
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  width: 100%;
+  height: 90vh;
+  padding-top: 2rem;
+}
+
+.doc-sec .doctors .carousel .inner-carousel .itemon .doc-name{
+  margin-top: -55%;
+} 
+
+.doc-sec .doctors .carousel .inner-carousel .itemon .doc-name h4{
+  color:#21272A;
+  font-family: 'Roboto',sans-serif;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 110%; /* 1.375rem */
+  margin: 15% 0 0 6%;
+}
+
+.doc-sec .doctors .carousel .inner-carousel .itemon .doc-name p{
+  font-size: 1rem;
+  margin: -15% 0 0 85%;
+}
+
+.doc-sec .doctors .carousel .inner-carousel .itemon  .doc-name h3{
+  color:#21272A;
+  font-family: 'Roboto',sans-serif;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 110%; /* 1.375rem */
+  margin: 5% 0 0 4%;
+}
+
+.doc-sec .doctors .carousel .inner-carousel .itemon  .doc-name h2{
+  color:#21272A;
+  font-family: 'Roboto',sans-serif;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 110%; /* 1.375rem */
+  margin: 5% 0 0 4%;
+}
+
+.doc-sec .doctors .carousel .inner-carousel .itemon  .doc-name h5{
+  color:#21272A;
+  font-family: 'Roboto',sans-serif;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 110%; /* 1.375rem */
+  margin: 5% 0 0 4%;
+}
+
+.doc-sec .doctors .carousel .inner-carousel .itemon  .doc-name h6{
+  color:#21272A;
+  font-family: 'Roboto',sans-serif;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 110%; /* 1.375rem */
+  margin: 5% 0 0 4%;
+}
+
+.doc-sec .doctors .carousel .inner-carousel .itemon .t-work{
+  padding: 0.6rem 0 0 1rem ;
+  width: 12.875rem;
+  height: 1.83081rem;
+}
+
+.doc-sec .doctors .carousel .inner-carousel .itemon .t-work h6{
+  margin: -1.4rem 0 0 2rem;
+  color: #393939;
+  font-family: 'Roboto',sans-serif;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 110%; /* 0.825rem */
+}
+
+.doc-sec .doctors .carousel .inner-carousel .itemon .location{
+  padding: 0.6rem 0 0 1rem ;
+  width: 12.875rem;
+  height: 1.83081rem;
+}
+
+.doc-sec .doctors .carousel .inner-carousel .itemon .location h6{
+  margin: -1.4rem 0 0 2rem;
+  color: #393939;
+  font-family: 'Roboto',sans-serif;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 110%; /* 0.9625rem */
+}
+
+.doc-sec .doctors .carousel .inner-carousel .itemon .stars {
+  margin: 2% 0 0 5% ;
+}
+
+.doc-sec .doctors .carousel .inner-carousel .itemon .doc-info{
+  display: flex;
+  align-items: flex-start;
+  flex-direction: row;
+  margin:4% 0 0 4%;
+}
+
+.doc-sec .doctors .carousel .inner-carousel .itemon .doc-info .trans-doc{
+  display: flex;
+  align-items: flex-start;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+.doc-sec .doctors .carousel .inner-carousel .itemon .doc-info p{
+  color: var(--Red);
+  font-family: 'Roboto',sans-serif;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%; 
+  letter-spacing: 0.03125rem;
+}
+
+.doc-sec .doctors .carousel .inner-carousel .itemon:hover {
+  transform: scale(1.1);
+}
+
 
                               /* About */
 
@@ -573,9 +725,12 @@
     gap: 1%;
 
   }
+
+
 }
 @media (max-width: 450px) {
   .homesec1 .rightpart h2{
     font-size: 2.5em;
   }
+
 }
