--- a/src/pages/Profile.css
+++ b/src/pages/Profile.css
@@ -1,26 +1,29 @@
-
 /* Profile Section */
 .profile-sec {
   width: 100%;
   height: auto;
   text-align: center;
-  padding: 20px 0;
 }
 
 .profile-sec img {
-  width: 150px;
-  height: 150px;
+  display: flex;
+  width: 15%;
+  height: 10vw;
+  margin: 2% 0 0 42%;
   border-radius: 50%;
-  background-size: cover;
-  margin: 0 auto;
+  background-size: contain;
   position: relative;
+  background-color: #be0202;
 }
 
 .profile-sec .edit {
+  display: flex;
+  width: 52vw;
+  z-index: 20;
+  padding-left: 58rem;
+  margin-top: -3rem;
   position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  margin-top: -40px;
+  cursor: pointer;
 }
 
 .profile-sec .edit button {
@@ -36,7 +39,7 @@
 
 .profile-sec h4 {
   color: var(--Red);
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 2rem;
   font-weight: 500;
   margin-top: 10px;
@@ -51,16 +54,16 @@
 }
 
 .info-sec h4 {
-  color: #1F1F1F;
-  font-family: 'Roboto', sans-serif;
+  color: #1f1f1f;
+  font-family: "Roboto", sans-serif;
   font-size: 2rem;
   font-weight: 600;
   margin-bottom: 20px;
 }
 
 .info-sec label {
-  color: #1F1F1F;
-  font-family: 'Roboto', sans-serif;
+  color: #1f1f1f;
+  font-family: "Roboto", sans-serif;
   font-size: 1.2rem;
   font-weight: 600;
   display: block;
@@ -83,37 +86,40 @@
   gap: 20px;
 }
 
-.info-sec .inputs .name .f-name, .info-sec .inputs .name .l-name {
+.info-sec .inputs .name .f-name,
+.info-sec .inputs .name .l-name {
   flex: 1;
 }
 
-.info-sec .inputs .pass, .info-sec .inputs .confirm {
+.info-sec .inputs .pass,
+.info-sec .inputs .confirm {
   position: relative;
 }
 
-.info-sec .inputs .pass input, .info-sec .inputs .confirm input {
-  width: calc(100% - 40px);
-}
 
-.info-sec .inputs .pass button, .info-sec .inputs .confirm button {
+
+.info-sec .inputs .pass button,
+.info-sec .inputs .confirm button {
   position: absolute;
-  right: 10px;
-  top: 50%;
+  right: 15px;
+  top: 55%;
   transform: translateY(-50%);
   background: none;
   border: none;
 }
 
 /* Buttons */
-.save, .delete {
+.save,
+.delete {
   text-align: center;
 }
 
-.save button, .delete button {
+.save button,
+.delete button {
   width: 100%;
   background-color: var(--Red);
   color: var(--whiteColor);
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 1.2rem;
   border: none;
   border-radius: 8px;
@@ -121,14 +127,14 @@
   margin-bottom: 20px;
 }
 
-.save button:hover, .delete button:hover {
-  cursor: pointer;
-  background-color: var(--secondaryColor);
-  color: var(--Red);
+.save button:hover,
+.delete button:hover {
+  opacity: 0.7;
 }
 
 /* Popups */
-.popup-s, .popup-d {
+.popup-s,
+.popup-d {
   width: 100%;
   height: 100vh;
   background: rgba(18, 22, 25, 0.65);
@@ -141,13 +147,15 @@
   z-index: 9999;
 }
 
-.popup-s .check, .popup-d .message .icon {
+.popup-s .check,
+.popup-d .message .icon {
   width: 60px;
   height: 60px;
   margin-bottom: 20px;
 }
 
-.popup-s .btn, .popup-d .message .button {
+.popup-s .btn,
+.popup-d .message .button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -157,12 +165,13 @@
   border: 2px solid var(--Red);
   background: var(--Red);
   color: var(--whiteColor);
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 1.2rem;
   border-radius: 8px;
 }
 
-.popup-s .btn:hover, .popup-d .message .button:hover {
+.popup-s .btn:hover,
+.popup-d .message .button:hover {
   cursor: pointer;
   background-color: var(--blackred);
   color: var(--whiteColor);
@@ -178,16 +187,16 @@
 }
 
 .popup-d .message h2 {
-  color: #21272A;
-  font-family: 'Roboto', sans-serif;
+  color: #21272a;
+  font-family: "Roboto", sans-serif;
   font-size: 1.5rem;
   font-weight: 700;
   margin-bottom: 10px;
 }
 
 .popup-d .message p {
-  color: #21272A;
-  font-family: 'Roboto', sans-serif;
+  color: #21272a;
+  font-family: "Roboto", sans-serif;
   font-size: 1rem;
   margin-bottom: 20px;
 }
@@ -216,7 +225,8 @@
     padding: 8px;
   }
 
-  .save button, .delete button {
+  .save button,
+  .delete button {
     font-size: 1rem;
   }
 }
